# hl-paper-mode

./: .gitignore  LICENSE  README.md  pyproject.toml
extension/: manifest.json
extension/background/: service-worker.js
extension/content/: interceptor.js  overlay.js
extension/page/: ws_patch.js
extension/popup/: popup.html
extension/rules/: block-rules.json
src/hl_paper/: api.py  config.py  engine.py  execution.py  main.py  math_core.py  models.py  persistence.py  ws_feed.py
tests/: test_api.py  test_engine.py  test_execution.py  test_math_core.py  test_models.py  test_persistence.py  test_ws_feed.py
